# tanat-embs

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  codemeta.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: extract_changelog.sh  gtag.sh  test.sh
src/tanat_embs/: __init__.py
src/tanat_embs/datasets/: __init__.py  _utils.py  encoding.py  event_dataset.py  sequence_dataset.py
tests/: conftest.py
tests/data/: README.md
tests/data/datetime/: sequence_extra.csv  sequence_main.parquet
tests/data/static/: static.csv  static_embeddings.parquet
tests/data/timestep/: sequence_extra.csv  sequence_main.parquet
tests/datasets/: test_encoding.py  test_event_dataset.py  test_sequence_dataset.py
